styles/styles.css
/* Fonts generated by Font Squirrel (https://www.fontsquirrel.com) on December 11, 2023 */

@font-face {
  font-family: "inter";
  src: url("fonts/inter-semibold-webfont.woff2") format("woff2");
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: "inter";
  src: url("fonts/inter-light-webfont.woff2") format("woff2");
  font-weight: 300;
  font-style: normal;
}

body {
  font-family: "inter", sans-serif;
  font-weight: 300;
  color: #222;
}

h1 {
  font-size: 3rem;
  font-weight: 600;
  text-align: center;
  margin: 2rem 0.7rem;
  margin-bottom: 1.3rem;
}

.contact-info p,
.main-info p {
  font-size: 1.5rem;
  margin-top: 0;
}

a {
  text-decoration: none;
  color: #222;
}

a:hover {
  text-decoration: underline;
  color: #000;
}

svg {
  width: 30px;
  margin-right: 10px;
  vertical-align: top;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 90vh;
  row-gap: 1rem;
}

.main-info {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-info {
  display: flex;
  flex-direction: row;
  column-gap: 1rem;
}

.bug-box {
  display: flex;
  column-gap: 0.5rem;
  width: 100vw;
  align-items: center;
  position: absolute;
  bottom: 0;
}

.bug-secret-text {
  visibility: hidden;
  font-size: 1rem;
}

#bug {
  width: 30px;
}

#bug:hover + .bug-secret-text {
  visibility: visible;
}

@media screen and (max-width: 430px) {
  .container {
    justify-content: flex-start;
    row-gap: 1rem;
  }

  .contact-info {
    flex-direction: column;
  }
}

@media screen and (orientation: landscape) and (max-height: 350px) {
  .container {
    justify-content: flex-start;
  }

  .one {
    display: flex;
    column-gap: 1rem;
  }

  .two {
    display: none;
  }
}

@media screen and (orientation: portrait) and (max-height: 444px) {
  .one {
    display: flex;
    flex-direction: column;
  }

  .two {
    display: none;
  }
}

